Add data analyst agent functionality

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ replicate = "*"
 transformers = "*"
 scipy = "*"
 pydantic = "*"
+requests = "*"
+pygithub = "*"
 
 [dev-packages]
 ipykernel = "*"
